--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -3,9 +3,11 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <form method="post">
-    {% csrf_token %}
-    {{ registration_form|crispy }}
-    <button type="submit" class="btn btn-primary">Sign in</button>
-  </form>
+	<div style="margin: 10vh 75vh;"> 
+	  <form method="post">
+	    {% csrf_token %}
+	    {{ registration_form|crispy }}
+	    <button type="submit" class="btn btn-primary">Sign in</button>
+	  </form>
+	</div> 
 {% endblock %}
