--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,15 @@
 <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
  <title></title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<link rel="stylesheet" href="register-style.css">
 </head>
 <body>
-  <div class="container">
-    {% block content %}
-    {% endblock content %}
-  </div>
+{% include 'snippets/header.html' %}
+
+
+{% block content %}
+
+{% endblock content %}
+{% include 'snippets/footer.html' %}
 </body>
 </html>
