--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -12,8 +12,8 @@
             </div>
             {% if request.user.is_authenticated %}
             <div class="navbar-nav ml-auto">
-                <a href="logout/" class="nav-item nav-link">Profile</a>
-                <a href="#" class="nav-item nav-link">Log out</a>
+                <a href="#" class="nav-item nav-link">Profile</a>
+                <a href="logout" class="nav-item nav-link">Log out</a>
             </div>
             {% else %}
             <div class="navbar-nav ml-auto">
