--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -12,13 +12,13 @@
             </div>
             {% if request.user.is_authenticated %}
             <div class="navbar-nav ml-auto">
-                <a href="#" class="nav-item nav-link">Profile</a>
-                <a href="logout" class="nav-item nav-link">Log out</a>
+                <a href="{% url 'home' %}" class="nav-item nav-link">Profile</a>
+                <a href="{% url 'logout' %}" class="nav-item nav-link">Log out</a>
             </div>
             {% else %}
             <div class="navbar-nav ml-auto">
-                <a href="#" class="nav-item nav-link">Login</a>
-                <a href="register/" class="nav-item nav-link">Register</a>
+                <a href="{% url 'login' %}" class="nav-item nav-link">Login</a>
+                <a href="{% url 'register' %}" class="nav-item nav-link">Register</a>
             </div>
             {% endif %}
         </div>
