--- a/account/templates/account/register-style.css
+++ b/account/templates/account/register-style.css
@@ -1,51 +1,45 @@
-@import "bourbon";
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
-body {
-	background: #eee !important;	
+body{
+    margin: 0;
+    font-size: .9rem;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #212529;
+    text-align: left;
+    background-color: #f5f8fa;
 }
 
-.wrapper {	
-	margin-top: 80px;
-  margin-bottom: 80px;
+.navbar-laravel
+{
+    box-shadow: 0 2px 4px rgba(0,0,0,.04);
 }
 
-.form-signin {
-  max-width: 380px;
-  padding: 15px 35px 45px;
-  margin: 0 auto;
-  background-color: #fff;
-  border: 1px solid rgba(0,0,0,0.1);  
+.navbar-brand , .nav-link, .my-form, .login-form
+{
+    font-family: Raleway, sans-serif;
+}
 
-  .form-signin-heading,
-	.checkbox {
-	  margin-bottom: 30px;
-	}
+.my-form
+{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
 
-	.checkbox {
-	  font-weight: normal;
-	}
+.my-form .row
+{
+    margin-left: 0;
+    margin-right: 0;
+}
 
-	.form-control {
-	  position: relative;
-	  font-size: 16px;
-	  height: auto;
-	  padding: 10px;
-		@include box-sizing(border-box);
+.login-form
+{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
 
-		&:focus {
-		  z-index: 2;
-		}
-	}
-
-	input[type="text"] {
-	  margin-bottom: -1px;
-	  border-bottom-left-radius: 0;
-	  border-bottom-right-radius: 0;
-	}
-
-	input[type="password"] {
-	  margin-bottom: 20px;
-	  border-top-left-radius: 0;
-	  border-top-right-radius: 0;
-	}
+.login-form .row
+{
+    margin-left: 0;
+    margin-right: 0;
 }
