--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,13 +1,38 @@
 {% extends 'base.html' %}
 
-{% load crispy_forms_tags %}
 
 {% block content %}
-<div style="margin: 10vh 80vh">
-  <form method="post">
-    {% csrf_token %}
-    {{ login_form|crispy }}
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
-</div>
+
+<form class="my-form" style="margin-top: 10vh; margin-bottom:25vh; " method="post">{% csrf_token %}
+    <div class="cotainer">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">Log in</div>
+                        <div class="card-body">
+                                <div class="form-group row">
+                                    <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
+                                    <div class="col-md-6">
+                                		{{login_form.email}}
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="phone_number" class="col-md-4 col-form-label text-md-right">Password</label>
+                                    <div class="col-md-6">
+                                        {{login_form.password}}
+                                    </div>
+                                </div>
+                                    <div class="col-md-6 offset-md-4" >
+                                        <button type="submit" class="btn btn-primary">
+                                        Login
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+</form>
 {% endblock %}
