--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -38,6 +38,12 @@
                                         {{registration_form.password2}}
                                     </div>
                                 </div>
+
+                                <div class="form-group row">
+                                    {% for error in registration_form.errors %}
+                                    	{{error}}
+                                    {% endfor %}
+                                </div>
                                     <div class="col-md-6 offset-md-4">
                                         <button type="submit" class="btn btn-primary">
                                         Register
