--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -22,6 +22,19 @@
                                         {{login_form.password}}
                                     </div>
                                 </div>
+                                <div>
+                                    {% if login_form.errors %}
+                                        <div>
+                                        {% for field in login_form %}
+                                            {% for error in field.errors %}
+                                                <div class="form-group row" style="color:red; padding-left: 38vh;">
+                                                    <p style="margin-bottom: 0.01vh;">{{error}}</p>
+                                                </div>
+                                            {% endfor %}
+                                        {% endfor %}        
+                                        </div>
+                                    {% endif %}       
+                                </div>
                                     <div class="col-md-6 offset-md-4" >
                                         <button type="submit" class="btn btn-primary">
                                         Login
