--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,7 +1,4 @@
 {% extends 'base.html' %}
-
-{% load crispy_forms_tags %}
-
 {% block content %}
 
 <form class="my-form" style="margin-top: 5vh;" method="post">{% csrf_token %}
@@ -38,12 +35,17 @@
                                         {{registration_form.password2}}
                                     </div>
                                 </div>
-
-                                <div class="form-group row">
-                                    {% for error in registration_form.errors %}
-                                    	{{error}}
-                                    {% endfor %}
-                                </div>
+                              	{% if registration_form.errors %}
+                              		<div>
+    								{% for field in registration_form %}
+								        {% for error in field.errors %}
+								        	<div class="form-group row" style="color:red; padding-left: 50vh;">
+			                                    <p style="margin-bottom: 0.01vh;">{{error}}</p>
+			                                </div>
+								        {% endfor %}
+								    {% endfor %}    	
+									</div>
+								{% endif %}	
                                     <div class="col-md-6 offset-md-4">
                                         <button type="submit" class="btn btn-primary">
                                         Register
