--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -6,19 +6,19 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                     <div class="card">
-                        <div class="card-header">Register</div>
+                        <div class="card-header">Account</div>
                         <div class="card-body">
                                 <div class="form-group row">
                                     <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
                                     <div class="col-md-6">
-                                		{{registration_form.email}}
+                                        {{account_form.email}}
                                     </div>
                                 </div>
 
                                 <div class="form-group row">
                                     <label for="user_name" class="col-md-4 col-form-label text-md-right"> Username</label>
                                     <div class="col-md-6">
-                                    	{{registration_form.username}}
+                                        {{account_form.username}}
                                     </div>
                                 </div>
 
@@ -35,17 +35,17 @@
                                         {{registration_form.password2}}
                                     </div>
                                 </div>
-                              	{% if registration_form.errors %}
-                              		<div>
-    								{% for field in registration_form %}
-								        {% for error in field.errors %}
-								        	<div class="form-group row" style="color:red; padding-left: 50vh;">
-			                                    <p style="margin-bottom: 0.01vh;">{{error}}</p>
-			                                </div>
-								        {% endfor %}
-								    {% endfor %}    	
-									</div>
-								{% endif %}
+                                {% if registration_form.errors %}
+                                    <div>
+                                    {% for field in registration_form %}
+                                        {% for error in field.errors %}
+                                            <div class="form-group row" style="color:red; padding-left: 50vh;">
+                                                <p style="margin-bottom: 0.01vh;">{{error}}</p>
+                                            </div>
+                                        {% endfor %}
+                                    {% endfor %}        
+                                    </div>
+                                {% endif %}
                                 <div>
                                     {% if login_form.non_fieled_errors %}
                                         <div  class="form-group row" style="color:red; padding-left: 50vh">
@@ -53,10 +53,10 @@
                                             </p>
                                         </div>
                                     {% endif %}
-                                </div>	
+                                </div>  
                                     <div class="col-md-6 offset-md-4">
                                         <button type="submit" class="btn btn-primary">
-                                        Register
+                                        Save changes
                                         </button>
                                     </div>
                                 </div>
