--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -12,7 +12,7 @@
             </div>
             {% if request.user.is_authenticated %}
             <div class="navbar-nav ml-auto">
-                <a href="{% url 'home' %}" class="nav-item nav-link">Profile</a>
+                <a href="{% url 'account' %}" class="nav-item nav-link">Profile</a>
                 <a href="{% url 'logout' %}" class="nav-item nav-link">Log out</a>
             </div>
             {% else %}
