--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -21,23 +21,9 @@
                                         {{account_form.username}}
                                     </div>
                                 </div>
-
-                                <div class="form-group row">
-                                    <label for="phone_number" class="col-md-4 col-form-label text-md-right">Password</label>
-                                    <div class="col-md-6">
-                                        {{registration_form.password1}}
-                                    </div>
-                                </div>
-
-                                <div class="form-group row">
-                                    <label for="phone_number" class="col-md-4 col-form-label text-md-right">Password confirmation</label>
-                                    <div class="col-md-6">
-                                        {{registration_form.password2}}
-                                    </div>
-                                </div>
-                                {% if registration_form.errors %}
+                                {% if account_form.errors %}
                                     <div>
-                                    {% for field in registration_form %}
+                                    {% for field in account_form %}
                                         {% for error in field.errors %}
                                             <div class="form-group row" style="color:red; padding-left: 50vh;">
                                                 <p style="margin-bottom: 0.01vh;">{{error}}</p>
@@ -47,9 +33,9 @@
                                     </div>
                                 {% endif %}
                                 <div>
-                                    {% if login_form.non_fieled_errors %}
+                                    {% if account_form.non_fieled_errors %}
                                         <div  class="form-group row" style="color:red; padding-left: 50vh">
-                                            <p style="margin-bottom: 0.01vh;">{{login_form.non_fieled_errors}}
+                                            <p style="margin-bottom: 0.01vh;">{{account_form.non_fieled_errors}}
                                             </p>
                                         </div>
                                     {% endif %}
