--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 {% block content %}
 
-<form class="my-form" style="margin-top: 5vh;" method="post">{% csrf_token %}
+<form class="my-form" style="margin-top: 20vh;" method="post">{% csrf_token %}
     <div class="cotainer">
         <div class="row justify-content-center">
             <div class="col-md-8">
