--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -4,7 +4,7 @@
 <form class="my-form" style="margin-top: 20vh;" method="post">{% csrf_token %}
     <div class="cotainer">
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">Account</div>
                         <div class="card-body">
@@ -39,7 +39,11 @@
                                             </p>
                                         </div>
                                     {% endif %}
-                                </div>  
+                                </div>
+                                {% if success_message %}
+                                    <p style="color: green; padding-left: 46vh; font-size: 20px; font-weight:bold;">{{success_message}}
+                                    </p>
+                                {% endif %}  
                                     <div class="col-md-6 offset-md-4">
                                         <button type="submit" class="btn btn-primary">
                                         Save changes
