--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -11,14 +11,14 @@
                                 <div class="form-group row">
                                     <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
                                     <div class="col-md-6">
-                                        {{account_form.email}}
+                                        <input type="text" name="email" id="email"class='form-control'>
                                     </div>
                                 </div>
 
                                 <div class="form-group row">
                                     <label for="user_name" class="col-md-4 col-form-label text-md-right"> Username</label>
                                     <div class="col-md-6">
-                                        {{account_form.username}}
+                                        <input type="text" name="username" id="user_name"class='form-control'>
                                     </div>
                                 </div>
                                 {% if account_form.errors %}
