--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -13,13 +13,13 @@
                                 <div class="form-group row">
                                     <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
                                     <div class="col-md-6">
-                                		{{login_form.email}}
+                                		<input type="text" name="email" id="email"class='form-control'>
                                     </div>
                                 </div>
                                 <div class="form-group row">
                                     <label for="phone_number" class="col-md-4 col-form-label text-md-right">Password</label>
                                     <div class="col-md-6">
-                                        {{login_form.password}}
+                                        <input type="pasword" name="password" id="password"class='form-control'>
                                     </div>
                                 </div>
                                 <div>
