Completed password change

--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container" style="padding-top: 40vh; font-size: 2em;">
 	<div class="d-flex flex-column">
-		<p class="m-auto">Your password has been Updated.</p>
+		<p class="m-auto">Your password has been Updated. Back to <a href="{% url 'home' %}">Home</a></p>
 	</div>
 </div>
 
