--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -11,21 +11,21 @@
                                 <div class="form-group row">
                                     <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
                                     <div class="col-md-6">
-                                        <input type="text" name="email" id="email"class='form-control'>
+                                        <input type="text" name="email" id="email" class='form-control' value ="{{account_form.initial.email}}">
                                     </div>
                                 </div>
 
                                 <div class="form-group row">
                                     <label for="user_name" class="col-md-4 col-form-label text-md-right"> Username</label>
                                     <div class="col-md-6">
-                                        <input type="text" name="username" id="user_name"class='form-control'>
+                                        <input type="text" name="username" id="user_name"class='form-control' value="{{account_form.initial.username}}">
                                     </div>
                                 </div>
                                 {% if account_form.errors %}
                                     <div>
                                     {% for field in account_form %}
                                         {% for error in field.errors %}
-                                            <div class="form-group row" style="color:red; padding-left: 50vh;">
+                                            <div class="form-group row" style="color:red; padding-left: 35vh;">
                                                 <p style="margin-bottom: 0.01vh;">{{error}}</p>
                                             </div>
                                         {% endfor %}
@@ -34,16 +34,19 @@
                                 {% endif %}
                                 <div>
                                     {% if account_form.non_fieled_errors %}
-                                        <div  class="form-group row" style="color:red; padding-left: 50vh">
+                                        <div  class="form-group row" style="color:red; padding-left: 35vh">
                                             <p style="margin-bottom: 0.01vh;">{{account_form.non_fieled_errors}}
                                             </p>
                                         </div>
                                     {% endif %}
                                 </div>
                                 {% if success_message %}
-                                    <p style="color: green; padding-left: 46vh; font-size: 20px; font-weight:bold;">{{success_message}}
+                                    <p style="color: green; padding-left: 34vh; font-size: 20px; font-weight:bold;">{{success_message}}
                                     </p>
-                                {% endif %}  
+                                {% endif %}
+                                <div class="col-md-6" style="margin-left: 32vh;">
+                                    <p><a href="{% url 'password_change' %}">Change password</a></p>
+                                </div>    
                                     <div class="col-md-6 offset-md-4">
                                         <button type="submit" class="btn btn-primary">
                                         Save changes
