--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -17,9 +17,9 @@
                                     </div>
                                 </div>
                                 <div class="form-group row">
-                                    <label for="phone_number" class="col-md-4 col-form-label text-md-right">Password</label>
+                                    <label  class="col-md-4 col-form-label text-md-right">Password</label>
                                     <div class="col-md-6">
-                                        <input type="pasword" name="password" id="password"class='form-control'>
+                                        <input type="pasword" name="password" id="password"class='form-control' style="margin-bottom: 1px;">
                                     </div>
                                 </div>
                                 <div>
@@ -42,6 +42,9 @@
                                         </div>
                                     {% endif %}
                                 </div>
+                                <div class="col-md-6" style="margin: 1vh 32vh;">
+                                    <a href="{% url 'password_reset' %}">Forgot password?</a>
+                                </div>                                
                                     <div class="col-md-6 offset-md-4" >
                                         <button type="submit" class="btn btn-primary">
                                         Login
