--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -19,7 +19,7 @@
                                 <div class="form-group row">
                                     <label  class="col-md-4 col-form-label text-md-right">Password</label>
                                     <div class="col-md-6">
-                                        <input type="pasword" name="password" id="password"class='form-control' style="margin-bottom: 1px;">
+                                        <input type="password" name="password" id="password"class='form-control' style="margin-bottom: 1px;">
                                     </div>
                                 </div>
                                 <div>
