--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -23,16 +23,16 @@
                                 </div>
 
                                 <div class="form-group row">
-                                    <label for="phone_number" class="col-md-4 col-form-label text-md-right">Password</label>
+                                    <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
                                     <div class="col-md-6">
-                                        <input type="pasword" name="password1" id="password1"class='form-control'>
+                                        <input type="password" name="password1" id="password1"class='form-control'>
                                     </div>
                                 </div>
 
                                 <div class="form-group row">
                                     <label for="phone_number" class="col-md-4 col-form-label text-md-right">Password confirmation</label>
                                     <div class="col-md-6">
-                                        <input type="pasword" name="password2" id="password2"class='form-control'>
+                                        <input type="password" name="password2" id="password2"class='form-control'>
                                     </div>
                                 </div>
                               	{% if registration_form.errors %}
